kubernetes_sandbox/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: mysite.com
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
            path: /web
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
