kubernetes_sandbox/ingress/ingress_annotations.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: annotation-sample
annotaions:
  nginx.ingress.kubernetes.io/rewrite-target: /
  nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: app.exmple.com
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: v1-service
                port:
                  number: 80
