kubernetes_sandbox/ingress/ingress_default.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: default-backend-ingress
spec:
  defaultBackend:
    service:
      name: default-service
      port:
        number: 80
