kubernetes_sandbox/ingress/ingress_multi_host.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: path-routing-ingress
spec:
  rules:
    - host: www.host1.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                 port:
                   name: api-service
                   number: 80
    - host: www.host2.com
      http:
        paths:
          - path: /api/v2
            pathType: Prefix
            backend:
              service:
                name: api2-service
                  number: 80
