kubernetes_sandbox/ingress/ingress_tls.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls:
    - hosts:
        - my.site.com
      secretName: my-tls-secret
  rules:
    - host: my.site.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
